
Reggie, 6.4.1999:
-----------------
- Started with a dialog for inserting a footnote where you can make crazy footnotes
  if you want (like [1,2,3-6,7] and so on)

Reggie, 7.4.1999:
-----------------
- When dropping an image into a KWord page, it's inserted as a picture frame
- When dropping an url(list) into a KWord page the url(s) are opened ("image/*" is inserted as
  picture frame and other mime types are inserted as text for now)
- More work on footnotes

Reggie, 8.4.1999:
-----------------
- When saving text '>' and '<' are converted to &gt; and &lt;
- More work on footnotes/endnotes
  - Adding the footnote description for endnotes works quite well now
    (only in the sorting is a bug...)
- Some fixes and cleanups

Reggie, 10.4.1999:
------------------
- Cleanups
- Footnote/Endnote descriptions are sorted correctly now
- Implemented correct behavior when deleting a footnote/endnote

Reggie, 11.4.1999:
------------------
- A footnote/endnote description paragraph can't be deleted
- footnotes/endnotes don't loose connections to the footnote/endnote description paragraphs
  after sorting them anymore

Reggie, 12.4.1999:
------------------
- Paragraph information and name (if required) gets saved and loaded now

Reggie, 13.4.1999:
------------------
- Fixes

Reggie, 14.4.1999:
------------------
- Implemented saving footnotes/endotes
- Implemented saving footnote/endnote manager
- Implemented loading footnote/endnote manager
- Implemented loading footnotes/endotes

Reggie, 16.4.1999:
------------------
- More work on footnotes/endnotes
- Started with autoformat

Reggie, 17.4.1999:
------------------
- More work on footnote descriptions
- More work on autoformat

Reggie, 18.4.1999:
------------------
- Fix with dropping images into a kword page
- More work on autoformat (started with typographic quotes stuff)

Reggie, 19.4.1999:
------------------
- Made typographic quotes autoformat stuff more efficient
- Started working on more autoformat stuff