@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <DOC author="Reginald Stadlbauer and Torben Weis" email="reggie@kde.org and weis@kde.org" editor="KWord" mime="application/x-kword">
  <PAPER format="1" ptWidth="595" ptHeight="841" mmWidth ="210" mmHeight="297" inchWidth ="8.26772" inchHeight="11.6929" orientation="0" columns="1" ptColumnspc="3" mmColumnspc="1.05833" inchColumnspc="0.0416667" hType="0" fType="0" ptHeadBody="9" ptFootBody="9" mmHeadBody="3.5" mmFootBody="3.5" inchHeadBody="0.137795" inchFootBody="0.137795">
   <PAPERBORDERS mmLeft="0" mmTop="0" mmRight="0" mmBottom="0" ptLeft="0" ptTop="0" ptRight="0" ptBottom="0" inchLeft="0" inchTop="0" inchRight="0" inchBottom="0"/>
@@ -34,7 +34,7 @@
       <ITALIC value="0"/>
       <UNDERLINE value="0"/>
       <VERTALIGN value="0"/>
-     </FORMAT> 
+     </FORMAT>
      <TABULATOR mmpos="46" ptpos="133" inchpos="1.10089e+15" type="0"/>
     </LAYOUT>
    </PARAGRAPH>
@@ -69,7 +69,7 @@
       <ITALIC value="0"/>
       <UNDERLINE value="0"/>
       <VERTALIGN value="0"/>
-     </FORMAT> 
+     </FORMAT>
      <TABULATOR mmpos="46" ptpos="133" inchpos="1.60895e-19" type="0"/>
     </LAYOUT>
    </PARAGRAPH>
@@ -103,7 +103,7 @@
       <ITALIC value="0"/>
       <UNDERLINE value="0"/>
       <VERTALIGN value="0"/>
-     </FORMAT> 
+     </FORMAT>
      <TABULATOR mmpos="46" ptpos="133" inchpos="1.60697e-19" type="0"/>
     </LAYOUT>
    </PARAGRAPH>
@@ -137,7 +137,7 @@
       <ITALIC value="0"/>
       <UNDERLINE value="0"/>
       <VERTALIGN value="0"/>
-     </FORMAT> 
+     </FORMAT>
      <TABULATOR mmpos="46" ptpos="133" inchpos="1.60697e-19" type="0"/>
     </LAYOUT>
    </PARAGRAPH>
@@ -171,7 +171,7 @@
       <ITALIC value="0"/>
       <UNDERLINE value="0"/>
       <VERTALIGN value="0"/>
-     </FORMAT> 
+     </FORMAT>
      <TABULATOR mmpos="46" ptpos="133" inchpos="1.60697e-19" type="0"/>
     </LAYOUT>
    </PARAGRAPH>
@@ -205,7 +205,7 @@
       <ITALIC value="0"/>
       <UNDERLINE value="0"/>
       <VERTALIGN value="0"/>
-     </FORMAT> 
+     </FORMAT>
      <TABULATOR mmpos="46" ptpos="133" inchpos="1.60697e-19" type="0"/>
     </LAYOUT>
    </PARAGRAPH>
@@ -239,7 +239,7 @@
       <ITALIC value="0"/>
       <UNDERLINE value="0"/>
       <VERTALIGN value="0"/>
-     </FORMAT> 
+     </FORMAT>
      <TABULATOR mmpos="46" ptpos="133" inchpos="1.60697e-19" type="0"/>
     </LAYOUT>
    </PARAGRAPH>
@@ -273,7 +273,7 @@
       <ITALIC value="0"/>
       <UNDERLINE value="0"/>
       <VERTALIGN value="0"/>
-     </FORMAT> 
+     </FORMAT>
      <TABULATOR mmpos="46" ptpos="133" inchpos="1.60697e-19" type="0"/>
     </LAYOUT>
    </PARAGRAPH>
@@ -302,7 +302,7 @@
     <ITALIC value="0"/>
     <UNDERLINE value="0"/>
     <VERTALIGN value="0"/>
-   </FORMAT> 
+   </FORMAT>
    <TABULATOR mmpos="46" ptpos="133" inchpos="1.60697e-19" type="0"/>
   </STYLE>
   <STYLE>
@@ -327,7 +327,7 @@
     <ITALIC value="0"/>
     <UNDERLINE value="0"/>
     <VERTALIGN value="0"/>
-   </FORMAT> 
+   </FORMAT>
   </STYLE>
   <STYLE>
    <NAME value="Head 2"/>
@@ -351,7 +351,7 @@
     <ITALIC value="0"/>
     <UNDERLINE value="0"/>
     <VERTALIGN value="0"/>
-   </FORMAT> 
+   </FORMAT>
   </STYLE>
   <STYLE>
    <NAME value="Head 3"/>
@@ -375,7 +375,7 @@
     <ITALIC value="0"/>
     <UNDERLINE value="0"/>
     <VERTALIGN value="0"/>
-   </FORMAT> 
+   </FORMAT>
   </STYLE>
   <STYLE>
    <NAME value="Enumerated List"/>
@@ -399,7 +399,7 @@
     <ITALIC value="0"/>
     <UNDERLINE value="0"/>
     <VERTALIGN value="0"/>
-   </FORMAT> 
+   </FORMAT>
   </STYLE>
   <STYLE>
    <NAME value="Alphabetical List"/>
@@ -423,7 +423,7 @@
     <ITALIC value="0"/>
     <UNDERLINE value="0"/>
     <VERTALIGN value="0"/>
-   </FORMAT> 
+   </FORMAT>
   </STYLE>
   <STYLE>
    <NAME value="Bullet List"/>
@@ -447,7 +447,7 @@
     <ITALIC value="0"/>
     <UNDERLINE value="0"/>
     <VERTALIGN value="0"/>
-   </FORMAT> 
+   </FORMAT>
   </STYLE>
  </STYLES>
 </DOC>
