@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <DOC author="Reginald Stadlbauer and Torben Weis" email="reggie@kde.org and weis@kde.org" editor="KWord" mime="application/x-kword">
  <PAPER format="1" ptWidth="595" ptHeight="841" mmWidth ="210" mmHeight="297" inchWidth ="8.26772" inchHeight="11.6929" orientation="0" columns="1" ptColumnspc="3" mmColumnspc="1.05833" inchColumnspc="0.0416667" hType="0" fType="0" ptHeadBody="9" ptFootBody="9" mmHeadBody="3.5" mmFootBody="3.5" inchHeadBody="0.137795" inchFootBody="0.137795">
   <PAPERBORDERS mmLeft="0" mmTop="0" mmRight="0" mmBottom="0" ptLeft="0" ptTop="0" ptRight="0" ptBottom="0" inchLeft="0" inchTop="0" inchRight="0" inchBottom="0"/>
@@ -35,7 +35,7 @@
       <ITALIC value="0"/>
       <UNDERLINE value="0"/>
       <VERTALIGN value="0"/>
-     </FORMAT> 
+     </FORMAT>
     </LAYOUT>
    </PARAGRAPH>
   </FRAMESET>
@@ -69,7 +69,7 @@
       <ITALIC value="0"/>
       <UNDERLINE value="0"/>
       <VERTALIGN value="0"/>
-     </FORMAT> 
+     </FORMAT>
     </LAYOUT>
    </PARAGRAPH>
   </FRAMESET>
@@ -102,7 +102,7 @@
       <ITALIC value="0"/>
       <UNDERLINE value="0"/>
       <VERTALIGN value="0"/>
-     </FORMAT> 
+     </FORMAT>
     </LAYOUT>
    </PARAGRAPH>
   </FRAMESET>
@@ -135,7 +135,7 @@
       <ITALIC value="0"/>
       <UNDERLINE value="0"/>
       <VERTALIGN value="0"/>
-     </FORMAT> 
+     </FORMAT>
     </LAYOUT>
    </PARAGRAPH>
   </FRAMESET>
@@ -168,7 +168,7 @@
       <ITALIC value="0"/>
       <UNDERLINE value="0"/>
       <VERTALIGN value="0"/>
-     </FORMAT> 
+     </FORMAT>
     </LAYOUT>
    </PARAGRAPH>
   </FRAMESET>
@@ -201,7 +201,7 @@
       <ITALIC value="0"/>
       <UNDERLINE value="0"/>
       <VERTALIGN value="0"/>
-     </FORMAT> 
+     </FORMAT>
     </LAYOUT>
    </PARAGRAPH>
   </FRAMESET>
@@ -234,7 +234,7 @@
       <ITALIC value="0"/>
       <UNDERLINE value="0"/>
       <VERTALIGN value="0"/>
-     </FORMAT> 
+     </FORMAT>
     </LAYOUT>
    </PARAGRAPH>
   </FRAMESET>
@@ -267,7 +267,7 @@
       <ITALIC value="0"/>
       <UNDERLINE value="0"/>
       <VERTALIGN value="0"/>
-     </FORMAT> 
+     </FORMAT>
     </LAYOUT>
    </PARAGRAPH>
   </FRAMESET>
@@ -295,7 +295,7 @@
     <ITALIC value="0"/>
     <UNDERLINE value="0"/>
     <VERTALIGN value="0"/>
-   </FORMAT> 
+   </FORMAT>
   </STYLE>
   <STYLE>
    <NAME value="Head 1"/>
@@ -319,7 +319,7 @@
     <ITALIC value="0"/>
     <UNDERLINE value="0"/>
     <VERTALIGN value="0"/>
-   </FORMAT> 
+   </FORMAT>
   </STYLE>
   <STYLE>
    <NAME value="Head 2"/>
@@ -343,7 +343,7 @@
     <ITALIC value="0"/>
     <UNDERLINE value="0"/>
     <VERTALIGN value="0"/>
-   </FORMAT> 
+   </FORMAT>
   </STYLE>
   <STYLE>
    <NAME value="Head 3"/>
@@ -367,7 +367,7 @@
     <ITALIC value="0"/>
     <UNDERLINE value="0"/>
     <VERTALIGN value="0"/>
-   </FORMAT> 
+   </FORMAT>
   </STYLE>
   <STYLE>
    <NAME value="Enumerated List"/>
@@ -391,7 +391,7 @@
     <ITALIC value="0"/>
     <UNDERLINE value="0"/>
     <VERTALIGN value="0"/>
-   </FORMAT> 
+   </FORMAT>
   </STYLE>
   <STYLE>
    <NAME value="Alphabetical List"/>
@@ -415,7 +415,7 @@
     <ITALIC value="0"/>
     <UNDERLINE value="0"/>
     <VERTALIGN value="0"/>
-   </FORMAT> 
+   </FORMAT>
   </STYLE>
   <STYLE>
    <NAME value="Bullet List"/>
@@ -439,7 +439,7 @@
     <ITALIC value="0"/>
     <UNDERLINE value="0"/>
     <VERTALIGN value="0"/>
-   </FORMAT> 
+   </FORMAT>
   </STYLE>
  </STYLES>
 </DOC>
