@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <DOC author="Reginald Stadlbauer and Torben Weis" email="reggie@kde.org and weis@kde.org" editor="KWord" mime="application/x-kword">
  <PAPER format="1" ptWidth="595" ptHeight="841" mmWidth ="210" mmHeight="297" inchWidth ="8.26772" inchHeight="11.6929" orientation="0" columns="2" ptColumnspc="5" mmColumnspc="2" inchColumnspc="0.0787402" hType="0" fType="0" ptHeadBody="9" ptFootBody="9" mmHeadBody="3.5" mmFootBody="3.5" inchHeadBody="0.137795" inchFootBody="0.137795">
   <PAPERBORDERS mmLeft="10" mmTop="15" mmRight="10" mmBottom="15" ptLeft="28" ptTop="42" ptRight="28" ptBottom="42" inchLeft="0.393701" inchTop="0.590551" inchRight="0.393701" inchBottom="0.590551"/>
@@ -35,7 +35,7 @@
       <ITALIC value="0"/>
       <UNDERLINE value="0"/>
       <VERTALIGN value="0"/>
-     </FORMAT> 
+     </FORMAT>
      <TABULATOR mmpos="61" ptpos="174" inchpos="1.10089e+15" type="0"/>
      <TABULATOR mmpos="31" ptpos="88" inchpos="1.10089e+15" type="0"/>
     </LAYOUT>
@@ -70,7 +70,7 @@
       <ITALIC value="0"/>
       <UNDERLINE value="0"/>
       <VERTALIGN value="0"/>
-     </FORMAT> 
+     </FORMAT>
      <TABULATOR mmpos="61" ptpos="174" inchpos="1.10089e+15" type="0"/>
      <TABULATOR mmpos="31" ptpos="88" inchpos="1.10089e+15" type="0"/>
     </LAYOUT>
@@ -105,7 +105,7 @@
       <ITALIC value="0"/>
       <UNDERLINE value="0"/>
       <VERTALIGN value="0"/>
-     </FORMAT> 
+     </FORMAT>
      <TABULATOR mmpos="61" ptpos="174" inchpos="1.10089e+15" type="0"/>
      <TABULATOR mmpos="31" ptpos="88" inchpos="1.10089e+15" type="0"/>
     </LAYOUT>
@@ -140,7 +140,7 @@
       <ITALIC value="0"/>
       <UNDERLINE value="0"/>
       <VERTALIGN value="0"/>
-     </FORMAT> 
+     </FORMAT>
      <TABULATOR mmpos="61" ptpos="174" inchpos="1.10089e+15" type="0"/>
      <TABULATOR mmpos="31" ptpos="88" inchpos="1.10089e+15" type="0"/>
     </LAYOUT>
@@ -175,7 +175,7 @@
       <ITALIC value="0"/>
       <UNDERLINE value="0"/>
       <VERTALIGN value="0"/>
-     </FORMAT> 
+     </FORMAT>
      <TABULATOR mmpos="61" ptpos="174" inchpos="1.10089e+15" type="0"/>
      <TABULATOR mmpos="31" ptpos="88" inchpos="1.10089e+15" type="0"/>
     </LAYOUT>
@@ -210,7 +210,7 @@
       <ITALIC value="0"/>
       <UNDERLINE value="0"/>
       <VERTALIGN value="0"/>
-     </FORMAT> 
+     </FORMAT>
      <TABULATOR mmpos="61" ptpos="174" inchpos="1.10089e+15" type="0"/>
      <TABULATOR mmpos="31" ptpos="88" inchpos="1.10089e+15" type="0"/>
     </LAYOUT>
@@ -245,7 +245,7 @@
       <ITALIC value="0"/>
       <UNDERLINE value="0"/>
       <VERTALIGN value="0"/>
-     </FORMAT> 
+     </FORMAT>
      <TABULATOR mmpos="61" ptpos="174" inchpos="1.10089e+15" type="0"/>
      <TABULATOR mmpos="31" ptpos="88" inchpos="1.10089e+15" type="0"/>
     </LAYOUT>
@@ -275,7 +275,7 @@
     <ITALIC value="0"/>
     <UNDERLINE value="0"/>
     <VERTALIGN value="0"/>
-   </FORMAT> 
+   </FORMAT>
    <TABULATOR mmpos="61" ptpos="174" inchpos="1.10089e+15" type="0"/>
    <TABULATOR mmpos="31" ptpos="88" inchpos="1.10089e+15" type="0"/>
   </STYLE>
@@ -301,7 +301,7 @@
     <ITALIC value="0"/>
     <UNDERLINE value="0"/>
     <VERTALIGN value="0"/>
-   </FORMAT> 
+   </FORMAT>
   </STYLE>
   <STYLE>
    <NAME value="Head 2"/>
@@ -325,7 +325,7 @@
     <ITALIC value="0"/>
     <UNDERLINE value="0"/>
     <VERTALIGN value="0"/>
-   </FORMAT> 
+   </FORMAT>
   </STYLE>
   <STYLE>
    <NAME value="Head 3"/>
@@ -349,7 +349,7 @@
     <ITALIC value="0"/>
     <UNDERLINE value="0"/>
     <VERTALIGN value="0"/>
-   </FORMAT> 
+   </FORMAT>
   </STYLE>
   <STYLE>
    <NAME value="Enumerated List"/>
@@ -373,7 +373,7 @@
     <ITALIC value="0"/>
     <UNDERLINE value="0"/>
     <VERTALIGN value="0"/>
-   </FORMAT> 
+   </FORMAT>
   </STYLE>
   <STYLE>
    <NAME value="Alphabetical List"/>
@@ -397,7 +397,7 @@
     <ITALIC value="0"/>
     <UNDERLINE value="0"/>
     <VERTALIGN value="0"/>
-   </FORMAT> 
+   </FORMAT>
   </STYLE>
   <STYLE>
    <NAME value="Bullet List"/>
@@ -421,7 +421,7 @@
     <ITALIC value="0"/>
     <UNDERLINE value="0"/>
     <VERTALIGN value="0"/>
-   </FORMAT> 
+   </FORMAT>
   </STYLE>
  </STYLES>
 </DOC>
